; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_syntax.c_pop_current_state.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_syntax.c_pop_current_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@current_state = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@next_match_idx = common dso_local global i32 0, align 4
@keepend_level = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pop_current_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pop_current_state() #0 {
  %1 = alloca %struct.TYPE_4__, align 4
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @current_state, i32 0, i32 0), align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %4, label %14

4:                                                ; preds = %0
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @current_state, i32 0, i32 0), align 4
  %6 = sub nsw i32 %5, 1
  %7 = call i32 @CUR_STATE(i32 %6)
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @unref_extmatch(i32 %10)
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @current_state, i32 0, i32 0), align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @current_state, i32 0, i32 0), align 4
  br label %14

14:                                               ; preds = %4, %0
  store i32 -1, i32* @next_match_idx, align 4
  %15 = load i32, i32* @keepend_level, align 4
  %16 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @current_state, i32 0, i32 0), align 4
  %17 = icmp sge i32 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store i32 -1, i32* @keepend_level, align 4
  br label %19

19:                                               ; preds = %18, %14
  ret void
}

declare dso_local i32 @unref_extmatch(i32) #1

declare dso_local i32 @CUR_STATE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
